2000-08-28  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpchainbutton.[ch]: emit a "toggled" signal. This
	is rarely useful since in most cases you want to connect to 
	the "changed" signal of the attached size_entries since you can
	not know otherwise which of the attached entries needs to be
	adjusted. Providing the signal is good style nevertheless.

2000-08-27  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimp.c: NULL is the default log domain, not "".

2000-08-27  Piers Cornwell  <piers.cornwell@bigfoot.com>

	* plug-ins/Lighting/lighting_ui.c: s/Treshold/Threshold.

2000-08-27  Kevin Turner  <acapnotic@users.sourceforge.net>

	* libgimp/gimp.h (union _GimpParamData): 
	s/gint32 d_status/GimpPDBStatusType d_status/

2000-08-27  Sven Neumann  <sven@gimp.org>
	
	* Makefile.am
	* configure.in
	* po-perl: added new directory po-perl which takes care of 
	i18n for gimp-perl the standard way. Tweaked pxgettext a little.
	
	* plug-ins/perl/Makefile.PL: disabled use of plug-ins/perl/po. 
	Marc will take care of either removing the po directory or moving
	the new stuff there.
	
2000-08-27 Alastair McKinstry <mckinstry@computer.org>

	* configure.in: Added Irish (ga) to ALL_LINGUAS.

2000-08-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu.c: These names were accidentally
	changed by my conversion-script. Reverted the change to make
	scripts work again. Thanks to Andy Thomas for spotting this.

2000-08-25  Tor Lillqvist  <tml@iki.fi>

	* app/cursorutil.c (gimp_change_win_cursor): Plug memory leak. The
	bitmap and mask GdkBitmaps were leaked each time.

	* plug-ins/makefile.mingw.in: Really add it this time.

2000-08-25  Sven Neumann  <sven@gimp.org>

	* PLUGIN_MAINTAINERS: updated
	
	* app/gimphelp.c: if the internal helpbrowser is not found,
	offer to use Netscape instead.
	
2000-08-25  Tor Lillqvist  <tml@iki.fi>

	* libgimp/gimp.def: Add new entry points.

2000-08-25  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/fileops.pdb