@@ -1,5 +1,10 @@
 2000-08-28  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/script-fu.c: add missing cases to switch 
+	statement.
+
+2000-08-28  Sven Neumann  <sven@gimp.org>
+
 	* libgimp/gimpchainbutton.[ch]: emit a "toggled" signal. This
 	is rarely useful since in most cases you want to connect to 
 	the "changed" signal of the attached size_entries since you can
